k8s/list/deployment-list.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-deployment
  namespace: p-go-list
  labels:
    app: list-persona
spec:
  replicas: 2
  selector:
    matchLabels:
      app: list-persona
  template:
    metadata:
      labels:
        app: list-persona
    spec:
      nodeSelector:
        workload: list
      containers:
        - name: list-container
          image: danysoftdev/p-go-list:latest
          ports:
            - containerPort: 8080
