k8s/list/pod-list.yaml
apiVersion: v1
kind: Pod
metadata:
  name: list-pod
  namespace: p-go-list
  labels:
    app: list-persona
spec:
  nodeSelector:
    workload: list
  containers:
    - name: list-container
      image: danysoftdev/p-go-list:latest
      ports:
        - containerPort: 8080
